--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 ---
 layout: default
-title: "Home"
+title: "About"
+layout: page
 ---
 
-{% if site.show_excerpts %}
-  {% include home.html %}
-{% else %}
-  {% include archive.html title="Posts" %}
-{% endif %}
+My name is Hanul Jeon. I am currently a master's student in Mathematics at Seoul National University. I am interested in logic, especially set theory and constructive mathematics.
+
+I have accounts on [Mathematics stachexchange](https://math.stackexchange.com/users/53976), [Mathoverflow](https://mathoverflow.net/users/48041) and [Twitter](https://twitter.com/hanuljeon95). If you want ask to me, please contact me via my [e-mail](mailto:hanuljeon95@gmail.com) or my Twitter account.
+
+<a href="https://math.stackexchange.com/users/53976/hanul-jeon"><img src="https://math.stackexchange.com/users/flair/53976.png" width="208" height="58" alt="profile for Hanul Jeon at Mathematics Stack Exchange, Q&amp;A for people studying math at any level and professionals in related fields" title="profile for Hanul Jeon at Mathematics Stack Exchange, Q&amp;A for people studying math at any level and professionals in related fields"></a>
+<a href="https://mathoverflow.net/users/48041/hanul-jeon"><img src="https://mathoverflow.net/users/flair/48041.png" width="208" height="58" alt="profile for Hanul Jeon at MathOverflow, Q&amp;A for professional mathematicians" title="profile for Hanul Jeon at MathOverflow, Q&amp;A for professional mathematicians"></a>
+
+<a href="https://hanuljeon95.github.io/files/CV_20200128.pdf" target="_blank">Here is my recent curriculum vitae.</a> *(CV Updated: January 28, 2020.)*
