--- a/404.html
+++ b/404.html
@@ -7,5 +7,8 @@ sitemap: false
 
 <article>
   <header><h1>404</h1></header>
+  <div>
+      <img class="marginauto" src="files/404.png" alt="centered image" />
+   </div>
   <p>Page not found</p>
 </article>
