--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@ sitemap: false
 <article>
   <header><h1>404</h1></header>
   <div>
-      <img class="marginauto" src="files/404.png" alt="centered image" />
+      <img class="marginauto" src="files/404.png" alt="centered image" height="250", width="250" />
    </div>
   <p>Page not found</p>
 </article>
